...

import UIKit


class EnterMenuViewController: UIViewController {
    
    private lazy var btnEnter: UIButton = {
        let btn = UIButton()
        btn.backgroundColor = UIColor.systemPurple
        btn.setTitle("Войти".localized, for: .normal)
        btn.setTitleColor(.systemGray4, for: .normal)
        btn.layer.cornerRadius = 10
        btn.layer.maskedCorners = [.layerMaxXMaxYCorner, .layerMaxXMinYCorner, .layerMinXMinYCorner, .layerMinXMaxYCorner]
...
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.addTarget(self, action: #selector(BtnEnter_Click), for: .touchUpInside)
        return btn
    }()
    
    
    private lazy var btnRecoveryPass: UIButton = {
        let btn = UIButton()
        btn.setTitle("Восстановить пароль".localized, for: .normal)
        btn.setTitleColor(.systemGray, for: .normal)
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.addTarget(self, action: #selector(BtnRecoveryPass_Click), for: .touchUpInside)
        return btn
...
