...
    private var usserPassword: String?
    /// This final class need to conection in API
    private var apiManagerIndustry: APIManagerIndustry?
    
    // MARK: - Private UI
    /// A button for entering the app.
    private lazy var btnEnter: UIButton = {
        let btn = UIButton()
        btn.accessibilityIdentifier = "btnEnter"
        btn.backgroundColor = .white
        btn.setTitle("Войти".localized, for: .normal)
        btn.setTitleColor(.black, for: .normal)
        btn.layer.cornerRadius = 10
...
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.addTarget(self, action: #selector(BtnEnter_Click), for: .touchUpInside)
        return btn
    }()
    
    /// A button for password recovery.
    private lazy var btnRecoveryPass: UIButton = {
        let btn = UIButton()
        btn.setTitle("Восстановить пароль".localized, for: .normal)
        btn.setTitleColor(.systemGray, for: .normal)
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.accessibilityIdentifier = "btnRecoveryPass"
        btn.addTarget(self, action: #selector(BtnRecoveryPass_Click), for: .touchUpInside)
        return btn
    }()
    
    /// A button for show code.
    private lazy var btnShowCode: UIButton = {
        let btn = UIButton()
        btn.setTitle("Код устройства".localized, for: .normal)
        btn.setTitleColor(.systemGray, for: .normal)
        btn.translatesAutoresizingMaskIntoConstraints = false
        btn.titleLabel?.textAlignment = .right
        btn.accessibilityIdentifier = "btnShowCode"
...
