...
    
    // MARK: - Lifecycle Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        configureUI()
        registerForKeyboardNotification()
        self.view.accessibilityIdentifier = "RecovoryPasswordViewController"
    }
    
    deinit {
        NotificationCenter.default.removeObserver(self)
        apiManagerIndustry = nil
        print("sucsses closed RecovoryPasswordViewController")
...
